Fix Aura can't provide accurate cursor hotspot info.

On Linux,  device scale factor is not set.
On Win, there is no API to offer hotspot of a cursor.
This cl addresses the above two problems.

BUG=676687

Review-Url: https://codereview.chromium.org/2605773002
Cr-Commit-Position: refs/heads/master@{#441790}

Former-commit-id: 2f1d5f56541d4200134418bff40902734d4fe7ce