ui/base/cursor/cursor_loader_x11.cc
@@ -284,6 +284,7 @@ void CursorLoaderX11::SetPlatformCursor(gfx::NativeCursor* cursor) {
   if (*cursor == kCursorCustom)
     return;
 
+  cursor->set_device_scale_factor(scale());
   cursor->SetPlatformCursor(CursorFromId(cursor->native_type()));
 }
 
